gexiv2 0.14.1 - 5 May 2023 (stable)

 * Clean-up python support
 * Drop python2 support
 * Add option for building tests
 * Only run python tests when python is enabled
 * Fix get_gps_info() return data with unset altitude
 * Fix generate_xmp_packet() ignoring its parameters
 * Fix gexiv2-tool to call initialize()

Bugs fixed in this release:
 - Addresses https://gitlab.gnome.org/GNOME/gexiv2/-/issues/72
 - https://gitlab.gnome.org/GNOME/gexiv2/issues/69
 - https://gitlab.gnome.org/GNOME/gexiv2/issues/70

All contributors to this release:
 - Peter Eisenmann <p3732@getgoogleoff.me>
 - Alex Xu (Hello71) <alex_y_xu@yahoo.ca>
 - Felix Crux <felixc@felixcrux.com>
 - postscript-dev <43813-postscript-dev@users.noreply.gitlab.gnome.org>
 - Seth Falco <seth@falco.fun>
 - Jens Georg <mail@jensge.org>

gexiv2 0.14.0 - 18 Sep 2021 (stable)

 * Fix BMFF compile test

All contributors to this release:
 - Matt Turner <mattst88@gmail.com>

gexiv2 0.13.0 - 15 Aug 2021 (development)

 * Enable BMFF support if enabled in exiv2 version
 * Update gexiv2-dump tool
 * Mark gexiv2_metadata_from_stream as deprecated; it is fundamentally broken
 * More additions to API and _try versions that support GErorr if exiv2 might throw
 * Some additions to gexiv2-tool
 * Changes in build configuration

Bugs fixed in this release:
 - https://gitlab.gnome.org/GNOME/gexiv2/issues/140
 - https://gitlab.gnome.org/GNOME/gexiv2/issues/62
 - https://gitlab.gnome.org/GNOME/gexiv2/issues/62
 - https://gitlab.gnome.org/GNOME/gexiv2/issues/66

Merge requests included in this release:
 - https://gitlab.gnome.org/GNOME/gexiv2/merge_requests/54
 - https://gitlab.gnome.org/GNOME/gexiv2/merge_requests/59
 - https://gitlab.gnome.org/GNOME/gexiv2/merge_requests/51

All contributors to this release:
 - postscript-dev <postscript-dev@outlook.com>
 - Jens Georg <mail@jensge.org>
 - Peter Kovář <peter.kovar@reflexion.tv>

gexiv2 0.12.2 - 20 Feb 2021
 
 * Introduce gexiv2_metadata_get_exif_data