@@ -1,7 +1,7 @@
 project(
     'gexiv2',
     ['c', 'cpp'],
-    version : '0.14.1',
+    version : '0.14.2',
     license: 'GPL-2.0-or-later',
     meson_version : '>=0.51',
     default_options : [
@@ -18,13 +18,20 @@ gnome = import('gnome')
 pkg = import('pkgconfig')
 
 exiv2 = dependency('exiv2', version : '>= 0.26')
+
+# when building for 0.26 or 0.27 and with clang's libc++, reenable std::auto_ptr
+# and remove deprecation warnings for that
+if exiv2.version().version_compare('< 0.28')
+  add_project_arguments('-D_LIBCPP_ENABLE_CXX17_REMOVED_AUTO_PTR', language: 'cpp')
+  add_project_arguments('-D_LIBCPP_DISABLE_DEPRECATION_WARNINGS', language: 'cpp')
+endif
 gobject = dependency('gobject-2.0', version : '>= 2.46.0')
 gio = dependency('gio-2.0', version : '>= 2.46.0')
 cc = meson.get_compiler('c')
 cpp = meson.get_compiler('cpp')
 math = cc.find_library('m', required : false)
-
-bmff_test = '''#include <exiv2/exiv2.hpp>
+bmff_test = '''#define _LIBCPP_ENABLE_CXX17_REMOVED_AUTO_PTR
+#include <exiv2/exiv2.hpp>
 #ifndef EXV_ENABLE_BMFF
 #error No BMFF support in exiv2
 #endif
@@ -32,7 +39,8 @@ bmff_test = '''#include <exiv2/exiv2.hpp>
 
 bmff_available = cpp.compiles(bmff_test, name : 'BMFF support in exiv2', dependencies : [exiv2])
 
-private_pdata_test = '''#include <exiv2/exiv2.hpp>
+private_pdata_test = '''#define _LIBCPP_ENABLE_CXX17_REMOVED_AUTO_PTR
+#include <exiv2/exiv2.hpp>
 #include <iostream>
 int main(void) {
   Exiv2::DataBuf buf;
@@ -42,7 +50,8 @@ int main(void) {
 }'''
 private_pdata = cpp.compiles(private_pdata_test, name : 'DataBuf is sealead in exiv2', dependencies : [exiv2])
 
-has_any_error_test = '''#include <exiv2/exiv2.hpp>
+has_any_error_test = '''#define _LIBCPP_ENABLE_CXX17_REMOVED_AUTO_PTR
+#include <exiv2/exiv2.hpp>
 #include <iostream>
 int main(void) {
   Exiv2::AnyError *e;
@@ -51,7 +60,8 @@ int main(void) {
 }'''
 has_any_error = cpp.compiles(has_any_error_test, name : 'AnyError exists in exiv2', dependencies : [exiv2])
 
-xmpdatum_has_to_long_test = '''#include <exiv2/exiv2.hpp>
+xmpdatum_has_to_long_test = '''#define _LIBCPP_ENABLE_CXX17_REMOVED_AUTO_PTR
+#include <exiv2/exiv2.hpp>
 #include <iostream>
 int main(void) {
   Exiv2::XmpKey k{"Xmp.audio.Compressor"};
@@ -62,7 +72,8 @@ int main(void) {
 }'''
 xmpdatum_has_to_long = cpp.compiles(xmpdatum_has_to_long_test, name: 'Xmpdatum has toLong() in exiv2', dependencies : [exiv2])
 
-exifdatum_has_to_long_test = '''#include <exiv2/exiv2.hpp>
+exifdatum_has_to_long_test = '''#define _LIBCPP_ENABLE_CXX17_REMOVED_AUTO_PTR
+#include <exiv2/exiv2.hpp>
 #include <iostream>
 int main(void) {
   Exiv2::ExifKey k{"Exif.Image.OECF"};
